<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_bg_r12"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/constraintFlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btn_new,btn_share,btn_copy,btn_terms_users,btn_rate_us,btn_privacy_policy"
            app:flow_maxElementsWrap="3"
            app:flow_verticalGap="20dp"
            app:flow_wrapMode="aligned"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/setting_1"
            android:gravity="center"
            android:text="@string/t_new"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/setting_3"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/share"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_copy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/setting_5"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/copy"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_terms_users"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/setting_4"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/terms_of_users"
            android:textColor="#333333"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btn_rate_us"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/setting_2"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/rate_us"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_privacy_policy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/setting_6"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/privacy_policy"
            android:textColor="#333333"
            android:textSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>